[gd_scene load_steps=5 format=3 uid="uid://cwfdlqwusse7m"]

[ext_resource type="Script" path="res://player.gd" id="1_c0fsj"]
[ext_resource type="Texture2D" uid="uid://cjmsq8xr764tt" path="res://icon.svg" id="1_u6dg6"]
[ext_resource type="Script" path="res://DetectPlots.gd" id="2_di3ey"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25t0e"]
size = Vector2(128, 128)

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_c0fsj")

[node name="DetectPlots" type="Area2D" parent="."]
script = ExtResource("2_di3ey")

[node name="DetectPlotRange" type="CollisionShape2D" parent="DetectPlots"]
shape = SubResource("RectangleShape2D_25t0e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_25t0e")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_u6dg6")

[connection signal="area_entered" from="DetectPlots" to="DetectPlots" method="_on_area_entered"]
[connection signal="area_exited" from="DetectPlots" to="DetectPlots" method="_on_area_exited"]
